--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,1 +1,24 @@
+version: 2.1
+jobs:
+  build:
+    docker:
+      - image: cimg/docker@2.1.2
+        auth:
+          username: vijyant97
+          password: Vijyant@97   # Replace with your DockerHub password
+    steps:
+      - checkout
+      # ... steps for building/testing app ...
 
+      - setup_remote_docker:
+          version: 20.10.14
+          docker_layer_caching: true
+
+      # build and push Docker image
+      - run: |
+          TAG=0.1.$CIRCLE_BUILD_NUM
+          docker build - < dockerfile
+          # echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
+          docker push vijyant97/dev:golang 
+      # - run: |    
+      #     name:
