--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,8 @@ jobs:
       - image: cimg/docker@2.1.2
         auth:
           username: vijyant97
-          password: Vijyant@97   # Replace with your DockerHub password
+          password: $PASSWORD   # Replace with your DockerHub password
+    working_directory: /
     steps:
       - checkout
       # ... steps for building/testing app ...
@@ -17,7 +18,8 @@ jobs:
       # build and push Docker image
       - run: |
           TAG=0.1.$CIRCLE_BUILD_NUM
-          docker build - < dockerfile
+          # docker build - < dockerfile
+          docker build -t vijyant97/dev:golang .
           # echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
           docker push vijyant97/dev:golang 
       # - run: |    
@@ -28,4 +30,3 @@ workflow:
       - build
       - setup_remote_docker
       - run
-      
