--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: cimg/docker@2.1.2
+      - image: cimg/base:2022.07
         auth:
           username: vijyant97
           password: $PASSWORD   # Replace with your DockerHub password
