--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,14 +19,34 @@ jobs:
       - run: |
           TAG=0.1.$CIRCLE_BUILD_NUM
           # docker build - < dockerfile
-          docker build -t vijyant97/dev:golang .
+          docker build -t vijyant97/dev:${{TAG}} .
           echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin
-          docker push vijyant97/dev:golang 
-      # - run: |    
+          docker push vijyant97/dev:${{TAG}}
+
+  deploy:
+    docker:
+      - image: amazon/aws-cli
+        environment:
+          AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
+          AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
+          AWS_DEFAULT_REGION: $AWS_REGION
+    working_directory:  ~/workspace/circleci
+    steps:
+      - checkout
+      - run:
+          name: "Deploying to EKS"
+          command: |
+            apk add awscli
+            apk add kubectl
+            aws eks --region eu-west-1 update-kubeconfig --name go-test-cluster
+            sed -i 's/\(image:.*\)/\1\n      tag: '$TAG'/' deploy/k8s/deployment.yaml
+            kubectl apply -f deploy/k8s/deployment.yaml
+          
+   
+         # - run: |    
       #     name:
 workflow:
   build_push_docker:
     jobs:
       - build
-      - setup_remote_docker
-      - run
+      - deploy
