--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,3 +42,9 @@ jobs:
             sed -i 's/\(image:.*\)/\1\n      tag: '$TAG'/' deploy/k8s/deployment.yaml
             kubectl apply -f deploy/k8s/deployment.yaml
         
+workflows:
+  version: 2
+  build_and_deploy:
+    jobs:
+      - build
+      - deploy
