--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,8 +36,9 @@ jobs:
       - run:
           name: "Deploying to EKS"
           command: |
-            apk add awscli
-            apk add kubectl
+            apt-get update -y
+            apt-get install awscli -y
+            apt-get install kubectl -y
             aws eks --region eu-west-1 update-kubeconfig --name go-test-cluster
             sed -i 's/\(image:.*\)/\1\n      tag: '$TAG'/' deploy/k8s/deployment.yaml
             kubectl apply -f deploy/k8s/deployment.yaml
@@ -48,5 +49,4 @@ workflows:
     jobs:
       - build
       - deploytoeks
-        requires:
-          - build    
+          
