--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,12 +36,12 @@ jobs:
       - run:
           name: "Deploying to EKS"
           command: |
-            apt-get update -y
-            apt-get install awscli -y
-            apt-get install kubectl -y
-            aws eks --region eu-west-1 update-kubeconfig --name go-test-cluster
-            sed -i 's/\(image:.*\)/\1\n      tag: '$TAG'/' deploy/k8s/deployment.yaml
-            kubectl apply -f deploy/k8s/deployment.yaml
+           yum update -y
+           yum install awscli -y
+           yum install kubectl -y
+           aws eks --region eu-west-1 update-kubeconfig --name go-test-cluster
+           sed -i 's/\(image:.*\)/\1\n      tag: '$TAG'/' deploy/k8s/deployment.yaml
+           kubectl apply -f deploy/k8s/deployment.yaml
         
 workflows:
   version: 2
