--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,12 +36,16 @@ jobs:
       - run:
           name: "Deploying to EKS"
           command: |
-           yum update -y
-           yum install awscli -y
-           yum install kubectl -y
-           aws eks --region eu-west-1 update-kubeconfig --name go-test-cluster
-           sed -i 's/\(image:.*\)/\1\n      tag: '$TAG'/' deploy/k8s/deployment.yaml
-           kubectl apply -f deploy/k8s/deployment.yaml
+            yum update -y
+            yum install curl -y
+            yum install awscli -y
+          #  yum install kubectl -y
+            curl -o kubectl https://s3.us-west-2.amazonaws.com/amazon-eks/1.22.6/2022-03-09/bin/linux/amd64/kubectl
+            chmod +x ./kubectl
+            mkdir -p $HOME/bin && cp ./kubectl $HOME/bin/kubectl && export PATH=$PATH:$HOME/bin
+            aws eks --region eu-west-1 update-kubeconfig --name go-test-cluster
+            sed -i 's/\(image:.*\)/\1\n      tag: '$TAG'/' deploy/k8s/deployment.yaml
+            kubectl apply -f deploy/k8s/deployment.yaml
         
 workflows:
   version: 2
