--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,9 +3,9 @@ jobs:
   build:
     docker:
       - image: cimg/base:2022.03
-        auth:
-          username: vijyant97
-          password: Vijyant@7   # Replace with your DockerHub password
+        # auth:
+        #   username: vijyant97
+        #   password: Vijyant@7   # Replace with your DockerHub password
     working_directory: ~/workspace/circleci
     steps:
       - checkout
