--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,12 @@
 version: 2.1
 jobs:
-  build:
+  buildanddeploy:
     docker:
       - image: cimg/base:2022.03
-        # auth:
-        #   username: vijyant97
-        #   password: Vijyant@7   # Replace with your DockerHub password
+        environment:
+          AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
+          AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
+          AWS_DEFAULT_REGION: $AWS_REGION
     working_directory: ~/workspace/circleci
     steps:
       - checkout
@@ -15,41 +16,47 @@ jobs:
           version: 20.10.14
           docker_layer_caching: true
 
-      # build and push Docker image
+      # build and push Docker image and deploy to aws-eks
       - run: |
-          TAG=0.1.$CIRCLE_BUILD_NUM
-          # docker build - < dockerfile
-          echo $TAG
+          apt-get update -y 
+          TAG=0.1.$CIRCLE_BUILD_NUM          
           docker build -t vijyant97/dev:${TAG} .
           echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin
           docker push vijyant97/dev:${TAG}
+          apt-get update -y          
+          curl -o kubectl https://s3.us-west-2.amazonaws.com/amazon-eks/1.22.6/2022-03-09/bin/linux/amd64/kubectl
+          chmod +x ./kubectl
+          mkdir -p $HOME/bin && cp ./kubectl $HOME/bin/kubectl && export PATH=$PATH:$HOME/bin
+          aws eks --region eu-west-1 update-kubeconfig --name go-test-cluster
+          kubectl apply -f service.yaml
+          kubectl apply -f deployment.yaml
 
-  deploytoeks:
-    docker:
-      - image: amazon/aws-cli
-        environment:
-          AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
-          AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
-          AWS_DEFAULT_REGION: $AWS_REGION
-    working_directory:  ~/workspace/circleci
-    steps:
-      - checkout
-      - run:
-          name: "Deploying to EKS"
-          command: |
-            yum update -y
-            yum install curl -y
-            curl -o kubectl https://s3.us-west-2.amazonaws.com/amazon-eks/1.22.6/2022-03-09/bin/linux/amd64/kubectl
-            chmod +x ./kubectl
-            mkdir -p $HOME/bin && cp ./kubectl $HOME/bin/kubectl && export PATH=$PATH:$HOME/bin
-            aws eks --region eu-west-1 update-kubeconfig --name go-test-cluster
-            kubectl apply -f service.yaml
-            kubectl apply -f deployment.yaml
+  # deploytoeks:
+  #   docker:
+  #     - image: amazon/aws-cli
+  #       # environment:
+  #       #   AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
+  #       #   AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
+  #       #   AWS_DEFAULT_REGION: $AWS_REGION
+  #   working_directory:  ~/workspace/circleci
+  #   steps:
+  #     - checkout
+  #     - run:
+  #         name: "Deploying to EKS"
+  #         command: |
+  #           apt-get update -y
+  #           # yum install curl -y
+  #           curl -o kubectl https://s3.us-west-2.amazonaws.com/amazon-eks/1.22.6/2022-03-09/bin/linux/amd64/kubectl
+  #           chmod +x ./kubectl
+  #           mkdir -p $HOME/bin && cp ./kubectl $HOME/bin/kubectl && export PATH=$PATH:$HOME/bin
+  #           aws eks --region eu-west-1 update-kubeconfig --name go-test-cluster
+  #           kubectl apply -f service.yaml
+  #           kubectl apply -f deployment.yaml
         
 workflows:
   version: 2
   build_and_deploy:
     jobs:
-      - build
-      - deploytoeks
+      - buildanddeploy
+      
           
