--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,18 +18,18 @@ jobs:
 
       # build and push Docker image and deploy to aws-eks
       - run: |
-          apt-get update -y 
+          sudo apt-get update -y 
           TAG=0.1.$CIRCLE_BUILD_NUM          
-          docker build -t vijyant97/dev:${TAG} .
-          echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin
-          docker push vijyant97/dev:${TAG}
-          apt-get update -y          
+          sudo docker build -t vijyant97/dev:${TAG} .
+          sudo echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin
+          sudo docker push vijyant97/dev:${TAG}
+          # apt-get update -y          
           curl -o kubectl https://s3.us-west-2.amazonaws.com/amazon-eks/1.22.6/2022-03-09/bin/linux/amd64/kubectl
-          chmod +x ./kubectl
-          mkdir -p $HOME/bin && cp ./kubectl $HOME/bin/kubectl && export PATH=$PATH:$HOME/bin
+          sudo chmod +x ./kubectl
+          sudo mkdir -p $HOME/bin && cp ./kubectl $HOME/bin/kubectl && export PATH=$PATH:$HOME/bin
           aws eks --region eu-west-1 update-kubeconfig --name go-test-cluster
-          kubectl apply -f service.yaml
-          kubectl apply -f deployment.yaml
+          sudo kubectl apply -f service.yaml
+          sudo kubectl apply -f deployment.yaml
 
   # deploytoeks:
   #   docker:
