--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,8 @@ jobs:
       - run: |
           sudo apt-get update -y 
           sudo usermod -a -G docker circleci
-          TAG=0.1.$CIRCLE_BUILD_NUM          
+          TAG=0.1.$CIRCLE_BUILD_NUM 
+          sudo service start docker         
           sudo docker build -t vijyant97/dev:${TAG} .
       # - run: |    
       #     sudo echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin
