--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,10 +19,10 @@ jobs:
       # build and push Docker image and deploy to aws-eks
       - run: |
           sudo apt-get update -y 
-          # ulimit -n 65536 in /etc/init.d/docker
+           
           # sudo usermod -a -G docker circleci
           TAG=0.1.$CIRCLE_BUILD_NUM 
-          # sudo service start docker         
+          sudo service start docker         
           sudo docker build -t vijyant97/dev:${TAG} .
       # - run: |    
       #     sudo echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin
