--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
            
           sudo usermod -a -G docker root
           TAG=0.1.$CIRCLE_BUILD_NUM 
-          sudo service start docker         
+          sudo service docker start      
           sudo docker build -t vijyant97/dev:${TAG} .
       # - run: |    
       #     sudo echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin
