--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,8 +19,7 @@ jobs:
       # build and push Docker image and deploy to aws-eks
       - run: |
           sudo apt-get update -y 
-           
-          sudo usermod -a -G docker root
+          sudo usermod -aG docker:circleci
           TAG=0.1.$CIRCLE_BUILD_NUM 
           sudo service docker start      
           sudo docker build -t vijyant97/dev:${TAG} .
