--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,10 +18,10 @@ jobs:
 
       # build and push Docker image and deploy to aws-eks
       - run: |
-          sudo apt-get update -y 
-          sudo usermod -aG docker:circleci
+          apt-get update -y 
+          usermod -aG docker:circleci
           TAG=0.1.$CIRCLE_BUILD_NUM 
-          sudo docker build -t vijyant97/dev:${TAG} .
+          docker build -t vijyant97/dev:${TAG} .
       # - run: |    
       #     sudo echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin
       #     sudo docker push vijyant97/dev:${TAG}
