--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
       # build and push Docker image and deploy to aws-eks
       - run: |
           apt-get update -y 
-          usermod -aG docker:circleci
+          # usermod -aG docker:circleci
           TAG=0.1.$CIRCLE_BUILD_NUM 
           docker build -t vijyant97/dev:${TAG} .
       # - run: |    
