--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,12 +19,11 @@ jobs:
       # build and push Docker image and deploy to aws-eks
       - run: |
           sudo apt-get update -y 
-          # usermod -aG docker:circleci
           TAG=0.1.$CIRCLE_BUILD_NUM 
           docker build -t vijyant97/dev:${TAG} .
-      # - run: |    
-      #     sudo echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin
-      #     sudo docker push vijyant97/dev:${TAG}
+      - run: |    
+          echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin
+          docker push vijyant97/dev:${TAG}
       # - run: |    
       #     apt-get update -y          
       #     curl -o kubectl https://s3.us-west-2.amazonaws.com/amazon-eks/1.22.6/2022-03-09/bin/linux/amd64/kubectl
