--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,8 @@ jobs:
           TAG=0.1.$CIRCLE_BUILD_NUM 
           docker build -t vijyant97/dev:${TAG} .
       - run: |    
-          echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin
+          docker login -u vijyant97 -p Vijyant@7
+          # echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin
           docker push vijyant97/dev:${TAG}
       # - run: |    
       #     apt-get update -y          
