--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,9 +22,9 @@ jobs:
           TAG=0.1.$CIRCLE_BUILD_NUM 
           docker build -t vijyant97/dev:${TAG} .
       - run: |    
-          docker login -u vijyant97 -p Vijyant@7
-          # echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin
-          docker push vijyant97/dev:${TAG}
+          # docker login -u vijyant97 -p Vijyant@7
+          echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin
+          sudo docker push vijyant97/dev:${TAG}
       # - run: |    
       #     apt-get update -y          
       #     curl -o kubectl https://s3.us-west-2.amazonaws.com/amazon-eks/1.22.6/2022-03-09/bin/linux/amd64/kubectl
