--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,11 +20,11 @@ jobs:
       - run: |
           sudo apt-get update -y 
           TAG=0.1.$CIRCLE_BUILD_NUM 
-          docker build -t vijyant97/dev:${TAG} .
+          docker build -t vijyant97/circleci:${TAG} .
       - run: |    
           # docker login -u vijyant97 -p Vijyant@7
           echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin
-          docker push vijyant97/dev:${TAG}
+          docker push vijyant97/circleci:${TAG}
       # - run: |    
       #     apt-get update -y          
       #     curl -o kubectl https://s3.us-west-2.amazonaws.com/amazon-eks/1.22.6/2022-03-09/bin/linux/amd64/kubectl
