--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,14 +27,20 @@ jobs:
       - run: |    
           # docker tag vijyant97/circleci:${TAG} vijyant97/circleci:latest
           docker push vijyant97/circleci:latest
-      # - run: |    
-      #     apt-get update -y          
-      #     curl -o kubectl https://s3.us-west-2.amazonaws.com/amazon-eks/1.22.6/2022-03-09/bin/linux/amd64/kubectl
-      #     sudo chmod +x ./kubectl
-      #     sudo mkdir -p $HOME/bin && cp ./kubectl $HOME/bin/kubectl && export PATH=$PATH:$HOME/bin
-      #     aws eks --region eu-west-1 update-kubeconfig --name go-test-cluster
-      #     sudo kubectl apply -f service.yaml
-      #     sudo kubectl apply -f deployment.yaml
+      - run: |  
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          unzip awscliv2.zip 
+          sudo ./aws/install
+          curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
+          sudo mv /tmp/eksctl /usr/local/bin 
+      - run: |    
+          apt-get update -y          
+          curl -o kubectl https://s3.us-west-2.amazonaws.com/amazon-eks/1.22.6/2022-03-09/bin/linux/amd64/kubectl
+          sudo chmod +x ./kubectl
+          sudo mkdir -p $HOME/bin && cp ./kubectl $HOME/bin/kubectl && export PATH=$PATH:$HOME/bin
+          aws eks --region eu-west-1 update-kubeconfig --name go-test-cluster
+          sudo kubectl apply -f service.yaml
+          sudo kubectl apply -f deployment.yaml
 
   # deploytoeks:
   #   docker:
