--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,9 @@ jobs:
       - checkout
       # ... steps for building/testing app ...
       - sonarcloud/scan
+        - sonar.projectKey: vijyantg_clops_cicd_poc
+        - sonar.organization: vijyantg
+        
       # sonarcloud scan
       - setup_remote_docker:
           version: 20.10.14
@@ -49,4 +52,6 @@ workflows:
   build:
     jobs:
       - buildanddeploy:
-          context: SonarCloud                
+          context: SonarCloud
+      
+          
