--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,11 +14,9 @@ jobs:
       - checkout
       # ... steps for building/testing app ...
       - sonarcloud/scan:
-        - "sonar.projectKey: vijyantg_clops_cicd_poc"
-        - "sonar.organization: vijyantg"
-        
-        
-      # sonarcloud scan
+          sonar.projectKey: vijyantg_clops_cicd_poc
+          sonar.organization: vijyantg      
+        # sonarcloud scan
       - setup_remote_docker:
           version: 20.10.14
           docker_layer_caching: true
