--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,10 +14,10 @@ jobs:
       - checkout
       # ... steps for building/testing app ...
       - sonarcloud/scan:
-      
-        - "sonar.projectKey: vijyantg_clops_cicd_poc"
-        - "sonar.organization: vijyantg"      
-        # sonarcloud scan
+          
+            sonar.projectKey: 'vijyantg_clops_cicd_poc'
+            sonar.organization: 'vijyantg'      
+      # sonarcloud scan
       - setup_remote_docker:
           version: 20.10.14
           docker_layer_caching: true
