--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,10 +13,10 @@ jobs:
     steps:
       - checkout
       # ... steps for building/testing app ...
-      - sonarcloud/scan:
+      # - sonarcloud/scan:
           
-            sonar.projectKey: 'vijyantg_clops_cicd_poc'
-            sonar.organization: 'vijyantg'      
+      #     sonar.projectKey: 'vijyantg_clops_cicd_poc'
+      #     sonar.organization: 'vijyantg'     
       # sonarcloud scan
       - setup_remote_docker:
           version: 20.10.14
@@ -26,13 +26,14 @@ jobs:
       - run: |
           sudo apt-get update -y 
           TAG=0.1.$CIRCLE_BUILD_NUM 
-          docker build -t vijyant97/circleci:latest .
+          # docker build -t vijyant97/circleci:latest .
+          docker build -t vijyant97/circleci:${{TAG}} .
       - run: |    
           
           echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin
       - run: |    
-          # docker tag vijyant97/circleci:${TAG} vijyant97/circleci:latest
-          docker push vijyant97/circleci:latest
+          # docker tag vijyant97/circleci:${{TAG}} vijyant97/circleci:latest
+          docker push vijyant97/circleci:{{TAG}}
       - run: |  
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
           unzip awscliv2.zip 
