--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,13 +27,16 @@ jobs:
           sudo apt-get update -y 
           TAG=0.1.$CIRCLE_BUILD_NUM 
           # docker build -t vijyant97/circleci:latest .
-          docker build -t vijyant97/circleci:${{TAG}} .
+          docker build -t vijyant97/circleci:${TAG} .
+      - run: |
+          curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/master/contrib/install.sh | sudo sh -s -- -b /usr/local/bin   
+          trivy --exit-code 0 --no-progress vijyant97/circleci:${TAG}
       - run: |    
           
           echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin
       - run: |    
           # docker tag vijyant97/circleci:${{TAG}} vijyant97/circleci:latest
-          docker push vijyant97/circleci:{{TAG}}
+          docker push vijyant97/circleci:{TAG}
       - run: |  
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
           unzip awscliv2.zip 
