--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,8 @@ jobs:
           docker build -t vijyant97/circleci:${TAG} .
       - run: |
           curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/master/contrib/install.sh | sudo sh -s -- -b /usr/local/bin   
-          trivy --exit-code 0 --no-progress vijyant97/circleci:${TAG}
+          trivy image vijyant97/circleci:${TAG}
+          # trivy --exit-code 0 --no-progress vijyant97/circleci:${TAG}
       - run: |    
           
           echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin
