--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
       - run: |    
           # docker tag vijyant97/circleci:${{TAG}} vijyant97/circleci:latest
           docker tag vijyant97/circleci:${TAG} vijyant97/circleci:latest
-          docker push vijyant97/circleci:${TAG}
+          docker push vijyant97/circleci:latest
       - run: |  
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
           unzip awscliv2.zip 
