--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,9 +37,9 @@ jobs:
           echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin
       - run: |    
           # docker tag vijyant97/circleci:${{TAG}} vijyant97/circleci:latest
-          docker tag vijyant97/circleci:${TAG} vijyant97/circleci:latest
+          docker tag vijyant97/circleci:${TAG} vijyant97/dev:go
       - run: |    
-          docker push vijyant97/circleci:latest
+          docker push vijyant97/dev:go
       - run: |  
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
           unzip awscliv2.zip 
