--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,9 +35,9 @@ jobs:
       - run: |    
           
           echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin
-      - run: |    
-          # docker tag vijyant97/circleci:${{TAG}} vijyant97/circleci:latest
-          docker tag vijyant97/circleci:${TAG} vijyant97/circleci:${TAG}
+      # - run: |    
+      #     # docker tag vijyant97/circleci:${{TAG}} vijyant97/circleci:latest
+      #     docker tag vijyant97/circleci:${TAG} vijyant97/circleci:${TAG}
       - run: |    
           docker push vijyant97/circleci:${TAG}
       - run: |  
