--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
       #     # docker tag vijyant97/circleci:${{TAG}} vijyant97/circleci:latest
       #     docker tag vijyant97/circleci:${TAG} vijyant97/circleci:${TAG}
       - run: |    
-          docker push "vijyant97/circleci:${TAG}"
+          docker push vijyant97/circleci
       - run: |  
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
           unzip awscliv2.zip 
