--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,10 @@ jobs:
           docker build -t vijyant97/circleci:${TAG} .
       - run: |
           curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/master/contrib/install.sh | sudo sh -s -- -b /usr/local/bin   
-          trivy image --severity CRITICAL vijyant97/circleci:${TAG}
+          trivy image --severity CRITICAL vijyant97/circleci:${TAG} -o /tmp/trivy.json
+      - store_artifacts:
+          path: /tmp/trivy.json
+          name: trivy.json
           
       - run: |    
           
