--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,8 +30,9 @@ jobs:
           docker build -t vijyant97/circleci:${TAG} .
       - run: |
           # docker run ghcr.io/aquasecurity/trivy:latest --scan --out-format json --out-path ./trivy.json
+          sudo apt-get update -y
           sudo touch ./trivy.json
-          docker run ghcr.io/aquasecurity/trivy:latest image vijyant97/circleci:${TAG}  --format json --output ./trivy.json
+          docker run ghcr.io/aquasecurity/trivy:0.17.0 image vijyant97/circleci:${TAG}  --format json --output ./trivy.json
           mkdir -p /tmp
           cp ./trivy.json /tmp/trivy.json
       # - run: |
