--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,7 @@ jobs:
       # build and push Docker image and deploy to aws-eks
       - run: |
           sudo apt-get update -y 
-          TAG=0.1.$CIRCLE_BUILD_NUM 
-          # docker build -t vijyant97/circleci:latest .
+          TAG=0.1.$CIRCLE_BUILD_NUM            
           docker build -t vijyant97/circleci:${TAG} .
       - run: |    
           
@@ -39,9 +38,9 @@ jobs:
           # -v $HOME/Library/Caches:/root/.cache/ aquasec/trivy:latest vijyant97/circleci:${TAG}
           docker run aquasec/trivy image vijyant97/circleci:${TAG} 
           
-          sudo touch ./trivy.json
+          # sudo touch ./trivy.json
           # docker run ghcr.io/aquasecurity/trivy:latest image vijyant97/circleci:${TAG}  --format json --output ./trivy.json
-          mkdir -p /tmp
+          # mkdir -p /tmp
           cp ./trivy.json /tmp/trivy.json
       # - run: |
       #     curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/master/contrib/install.sh | sudo sh -s -- -b /usr/local/bin   
@@ -55,7 +54,7 @@ jobs:
           
 
       - run: |    
-          docker push vijyant97/circleci
+          docker push vijyant97/circleci:${TAG}
       - run: |  
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
           unzip awscliv2.zip 
