--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
           TAG=0.1.$CIRCLE_BUILD_NUM            
           docker build -t vijyant97/circleci:${TAG} .
       - run: |    
-          
+          docker tag vijyant97/circleci:${TAG} vijyant97/circleci:latest
           echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin
       - run: |
           
@@ -54,7 +54,7 @@ jobs:
           
 
       - run: |    
-          docker push vijyant97/dev:${TAG}
+          docker push vijyant97/circleci:${TAG}
       - run: |  
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
           unzip awscliv2.zip 
