--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,7 @@ jobs:
       - run: |
           sudo apt-get update -y 
           TAG=0.2.$CIRCLE_BUILD_NUM            
+          echo TAG=0.2.$CIRCLE_BUILD_NUM            
           docker build -t vijyant97/circleci:${TAG} .
           docker images 
       - run: |    
