--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
           docker images 
       - run: |    
           # docker tag vijyant97/circleci:${TAG} vijyant97/circleci:${TAG}
-          docker tag vijyant97/circleci:latest vijyant97/circleci:${TAG}
+          docker tag vijyant97/circleci vijyant97/circleci:${TAG} .
           echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin
       - run: |
           
