--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,11 +27,11 @@ jobs:
           sudo apt-get update -y 
           TAG=0.2.$CIRCLE_BUILD_NUM            
           echo TAG=0.2.$CIRCLE_BUILD_NUM            
-          docker build -t vijyant97/circleci .
+          docker build -t vijyant97/circleci -t vijyant97/circleci:${TAG} .
           docker images 
       - run: |    
           # docker tag vijyant97/circleci:${TAG} vijyant97/circleci:${TAG}
-          docker tag vijyant97/circleci vijyant97/circleci:${TAG} .
+          # docker tag vijyant97/circleci vijyant97/circleci:${TAG} .
           echo $DOCKER_PASS | docker login -u vijyant97 --password-stdin
       - run: |
           
