--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,7 @@ workflows:
   version: 2
   build:
     jobs:
-      - buildanddeploy:
-          context: sonarcloud
+      - buildanddeploy
+          
       
           
