--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,8 @@ workflows:
   version: 2
   build:
     jobs:
-      - buildanddeploy
+      - buildanddeploy:
+          context: SonarCloud
           
       
           
