--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
     working_directory: ~/workspace/circleci
     steps:
       - checkout
-      - sonarcloud/scan -X
+      - sonarcloud/scan
       - setup_remote_docker:
           version: 20.10.14
           docker_layer_caching: true
